chore: i make a comprount component for the card used for dialy diary and Todos and make the changes

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,10 @@
     <title>My Apps | Bundle of my apps</title>
   </head>
   <body>
-    <div id="root" class="h-dvh bg-slate-900 text-slate-50"></div>
+    <div
+      id="root"
+      class="h-dvh overflow-hidden bg-slate-900 text-slate-50"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
